# shiny-hunter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-28-hunt-performance.md  2026-04-28-shiny-preview.md  2026-04-29-monitor-mode.md  2026-04-29-static-encounter-support.md  2026-04-30-web-shiny-hunter.md
docs/superpowers/specs/: 2026-04-28-hunt-performance-design.md  2026-04-28-shiny-preview-design.md  2026-04-29-monitor-mode-design.md  2026-04-29-static-encounter-support-design.md  2026-04-30-web-shiny-hunter-design.md
macros/: crystal_preview.events.json  red_us_bulbasaur.events.json
src/shiny_hunter/: cli.py  config.py  crystal.py  delays.py  diagnostics.py  dv.py  emulator.py  gbfont.py  gen1_party.py  gen2_convert.py  gen2_data.py  hunter.py  macro.py  monitor.py  pokemon.py  polling.py  preview.py  progress.py  recorder.py  trace.py  workers.py
src/shiny_hunter/games/: blue_jp.py  blue_us.py  green_jp.py  red_jp.py  red_us.py  yellow_jp.py  yellow_us.py
src/shiny_hunter/macros/: red_jp_save.yaml  red_jp_starter.yaml  red_us_save.yaml  red_us_starter.yaml  yellow_jp_save.yaml  (+3 more)
states/: crystal_template.state
tests/: test_cli_help.py  test_config.py  test_crystal.py  test_delays.py  test_dv.py  test_gen1_party.py  test_gen2_convert.py  test_gen2_data.py  test_macro.py  test_monitor.py  test_polling.py  test_preview.py  test_recorder.py  test_trace.py  test_workers.py
web/: .gitignore  README.md  SPIKE.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/scripts/: extract-wasm.js
(+27 files in other folders)
